@@ -17,6 +17,7 @@
     login_password : "{{ zabbix_api.password }}"
     host_name : "{{ zabbix_api_host.hostname|default(inventory_hostname) }}"
     visible_name: "{{ zabbix_api_host.visible_name|default(omit) }}"
+    description: "{{ zabbix_api_host.description|default(omit) }}"
     host_groups: "{{ zabbix_api_host.groups }}"
     link_templates : "{{ zabbix_api_host.templates|default(omit) }}"
     status: "{{ zabbix_api_host.status|default(omit) }}"
