@@ -20,12 +20,14 @@ UnreachablePeriod={{ zabbix_proxy_unreacheableperiod }}
 ExternalScripts={{ zabbix_proxy_scripts }}
 FpingLocation=/usr/bin/fping
 Fping6Location=/usr/bin/fping6
-StatsAllowedIP={{ zabbix_proxy_servers  |join(',') }}
+StatsAllowedIP={{ zabbix_proxy_servers |join(',') }}
 Include={{ zabbix_conf_include }}
+EnableRemoteCommands={{ zabbix_proxy_remotecommands }}
+LogRemoteCommands={{ zabbix_proxy_logremotecommands }}
 
 # TLS
-TLSConnect={{ zabbix_proxy_tlsconnect }}
-TLSAccept={{ zabbix_proxy_tlsaccept }}
+TLSConnect={{ zabbix_proxy_tlsconnect|lower }}
+TLSAccept={{ zabbix_proxy_tlsaccept|lower }}
 {% if zabbix_proxy_psksecret is defined and zabbix_proxy_psksecret != '' %}
 TLSPSKFile={{ zabbix_tls_pskfile }}
 TLSPSKIdentity={{ zabbix_proxy_pskid }}
